[package]
authors = ["cnachen <cnachencli@live.cn>"]
build = "build.rs"
description = "`Hello, world!` in the embedded world"
edition = "2021"
keywords = ["embedded", "stm32f411"]
license = "MIT"
name = "stm32f4-blinky"
version = "0.1.1"

[dependencies.stm32-hal2]
version = "1.3"
features = ["f411"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

[[bin]]
name = "blinky"
path = "src/inf.rs"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true